--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -1,3 +1,20 @@
+:root {
+  --accent-color: #FF5500;
+  --accent-color-darker: #E94E00;
+  --text-main: #1B1F23;
+  --font-size-logo: 32px;
+  --font-size-t1: 20px;
+  --font-size-t2: 16px;
+  --font-size-main: 14px;
+
+  --font-weight-bold: 700;
+  --font-weight-semibold: 600;
+  --font-weight-medium: 500;
+  --font-weight-thin: 400;
+
+  --border-radius: 8px;
+}
+
 body {
   margin: 0;
   min-height: 100vh;
