--- a/src/features/filters/Filters.module.css
+++ b/src/features/filters/Filters.module.css
@@ -1,26 +1,28 @@
 .filtersContainer {
     background-color: #FFFFFF;
-    border-radius: 8px;
-    padding: 20px;
+    border-radius: var(--border-radius);
+    padding: 24px;
 }
 
 .header {
-    font-size: 16px;
-    font-weight: 600;
+    font-size: var(--font-size-t2);
+    font-weight: var(--font-weight-semibold);
     line-height: 20px;
     color: #333;
+    display: block;
+    margin-bottom: 20px;
 }
 
-.filterGroup {
-    margin-top: 20px;
+.filterGroup:not(:last-child) {
+    margin-bottom: 16px;
 }
 
 .label {
     display: block;
     margin-bottom: 5px;
-    font-weight: 400;
-    color: #1B1F23;
-    font-size: 14px;
+    font-weight: var(--font-weight-thin);
+    color: var(--text-main);
+    font-size: var(--font-size-main);
 }
 
 .select {
@@ -29,7 +31,7 @@
     background-color: #fff;
 
     padding: 10px 16px 10px 16px;
-    border-radius: 8px;
+    border-radius: var(--border-radius);
 
 }
 
