--- a/src/shared/styles/Filter/Filter.module.css
+++ b/src/shared/styles/Filter/Filter.module.css
@@ -1,12 +1,12 @@
 .filtersContainer {
     background-color: #FFFFFF;
-    border-radius: 8px;
+    border-radius: var(--border-radius);
     padding: 20px;
 }
 
 .header {
-    font-size: 16px;
-    font-weight: 600;
+    font-size: var(--font-size-t2);
+    font-weight: var(--font-weight-semibold);
     line-height: 20px;
     color: #333;
 }
