finished main page search params

--- a/src/entities/movie/ui/MovieCard/MovieCard.module.css
+++ b/src/entities/movie/ui/MovieCard/MovieCard.module.css
@@ -60,3 +60,11 @@
 .desc_row:not(:last-child) {
     margin-bottom: 12px;
 }
+
+.poster {
+    display: block;
+}
+
+.hidden {
+    display: none;
+}
