--- a/src/features/Header/styles.module.css
+++ b/src/features/Header/styles.module.css
@@ -15,6 +15,15 @@
 .logo {
     font-size: var(--font-size-logo);
     font-weight: var(--font-weight-bold);
+    text-decoration: none;
+    color: #FFFFFF;
+    transition: color .2s ease-in-out;
+
+}
+
+.logo:hover {
+    color: var(--accent-color);
+    transition: color .2s ease-in-out;
 }
 
 .action {
