Movie details page added

--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -3,6 +3,8 @@
   --accent-color-darker: #E94E00;
   --text-main: #1B1F23;
   --font-size-logo: 32px;
+  --font-size-t0: 24px;
+
   --font-size-t1: 20px;
   --font-size-t2: 16px;
   --font-size-main: 14px;
