--- a/src/pages/Layout/styles.module.css
+++ b/src/pages/Layout/styles.module.css
@@ -2,10 +2,12 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    width: 100vw;
 }
 
 .main {
     flex: 1;
     background-color: #ededed;
     display: flex;
+    width: 100%;
 }
