--- a/src/widgets/Header/styles.module.css
+++ b/src/widgets/Header/styles.module.css
@@ -8,7 +8,7 @@
 
     position: sticky;
     top: 0;
-    z-index: 1000;
+    z-index: 10;
 
 }
 
@@ -18,6 +18,8 @@
     text-decoration: none;
     color: #FFFFFF;
     transition: color .2s ease-in-out;
+    display: block;
+    height: 40px;
 
 }
 
