--- a/src/entities/movie/ui/MovieCard/MovieCard.module.css
+++ b/src/entities/movie/ui/MovieCard/MovieCard.module.css
@@ -4,12 +4,11 @@
     margin-bottom: 16px;
     background-color: #ffffff;
     display: flex;
-    gap: 24px;
-    justify-content: space-between;
+    gap: 25px;
 }
 
 .poster {
-    width: 10%;
+    width: 100px;
     cursor: pointer;
 }
 
@@ -22,7 +21,6 @@
 .info {
     width: 75%;
     cursor: pointer;
-
 }
 
 
@@ -30,7 +28,7 @@
     font-size: var(--font-size-t1);
     font-weight: var(--font-weight-bold);
     color: var(--text-main);
-    margin-bottom: 16px;
+    margin-bottom: 14px;
     display: block;
 }
 
@@ -47,7 +45,7 @@
 }
 
 .desc_name {
-    width: 20%;
+    width: 106px;
     color: #ABABAB;
 }
 
@@ -58,7 +56,7 @@
 }
 
 .desc_row:not(:last-child) {
-    margin-bottom: 12px;
+    margin-bottom: 14px;
 }
 
 .poster {
@@ -67,4 +65,8 @@
 
 .hidden {
     display: none;
+}
+
+.rating {
+    flex: 1;
 }
