--- a/src/shared/components/Input/CustomInput.module.css
+++ b/src/shared/components/Input/CustomInput.module.css
@@ -1,10 +1,14 @@
 .customInput {
     padding: 12px;
-    border: 1px solid rgba(225, 227, 230, 1);
+    border: 1px solid #E1E3E6;
     border-radius: 8px;
     width: 100%;
     box-sizing: border-box;
     font-size: 14px;
+}
+
+.customInput::placeholder {
+    color: #ABABAB;
 }
 
 .customInput:focus {
