--- a/src/shared/components/Select/CustomSelect.module.css
+++ b/src/shared/components/Select/CustomSelect.module.css
@@ -8,10 +8,19 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 16px;
-    border: 1px solid #ccc;
+    border: 1px solid rgba(225, 227, 230, 1);
     border-radius: var(--border-radius);
     cursor: pointer;
     background-color: #FFFFFF;
+}
+
+.activewithin {
+    border: 1px solid #FF5500;
+
+}
+
+.selected {
+    color: rgba(153, 159, 166, 1);
 }
 
 .selectBox span {
