Next: first working version after migration

--- a/src/entities/movie/ui/MovieCard/MovieCard.module.css
+++ b/src/entities/movie/ui/MovieCard/MovieCard.module.css
@@ -23,6 +23,10 @@
     cursor: pointer;
 }
 
+.link {
+    text-decoration: none;
+    color: inherit;
+}
 
 .title {
     font-size: var(--font-size-t1);
