--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,21 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  font-family: 'Roboto', sans-serif;
+}
+
 :root {
   --accent-color: #FF5500;
   --accent-color-darker: #E94E00;
@@ -15,12 +33,6 @@
   --font-weight-thin: 400;
 
   --border-radius: 8px;
-}
-
-body {
-  margin: 0;
-  min-height: 100vh;
-  font-family: 'Roboto', sans-serif;
 }
 
 .no-scroll {
